<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_layout"
    android:layout_width="400dp"
    android:layout_height="500dp"
    android:orientation="vertical"
    android:background="@drawable/popdesign"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="263dp"
        android:layout_height="218dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSetReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/Before10"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/background_popup"
            android:gravity="center"
            android:text="@string/Before10Min"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            >

        </RadioButton>

        <RadioButton
            android:id="@+id/Before20"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/background_popup"
            android:gravity="center"
            android:text="@string/Before20Min"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"></RadioButton>

        <RadioButton
            android:id="@+id/Custom"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/background_popup"
            android:gravity="center"
            android:text="@string/Custom"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"></RadioButton>
    </RadioGroup>
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonSetReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/buttonSetReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="368dp"
        android:text="Set Reminder"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="Close"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetReminder"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
